# ase-cli-tools

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: __init__.py  app.py  config.py  core.py  generate.py  registry.py  wizard.py
cli/templates/: header.py.tmpl  preamble.py.tmpl
cli/templates/attach/: plain.py.tmpl  plumed.py.tmpl
cli/templates/calculators/: espresso.py.tmpl  grace.py.tmpl  mace.py.tmpl  orca.py.tmpl  uma.py.tmpl
cli/templates/calculators/mace/: anicc.py.tmpl  mp.py.tmpl  off.py.tmpl  polar.py.tmpl
cli/templates/calculators/orb/: orbmol_v2.py.tmpl  v3_omat.py.tmpl  v3_omol.py.tmpl
cli/templates/drivers/: nve.py.tmpl  nvt_csvr.py.tmpl  nvt_langevin.py.tmpl  nvt_nose_hoover.py.tmpl
cli/templates/features/: wrap.py.tmpl
cli/templates/jobs/: md.py.tmpl  nvt.py.tmpl  relax.py.tmpl  singlepoint.py.tmpl
cli/templates/postprocess/: wrap.py.tmpl
cli/templates/writers/: traj.py.tmpl  xyz.py.tmpl
scripts/: nvt_md_uma.py  wrap_traj.py
